updated like button CSS, friends list contextual back button, bug fixes, friends list shows with empty query, visible message when no one has posted yet

--- a/static/css/bootstrap_overrides.css
+++ b/static/css/bootstrap_overrides.css
@@ -47,6 +47,8 @@ img[type="profilepic"] {
 	border-radius: 50%;
 	max-width: 15%;
 	object-fit: cover;
+	aspect-ratio: 1/1;
+	background-size: cover;
 }
 
 .my-auto {
@@ -90,6 +92,13 @@ h1 {
 	font-size: 3.33vw;
 	font-weight: bold;
 	color: white;
+	text-align: center;
+}
+
+h1[modifier='normal'] {
+	font-size: 3.33vw;
+	font-weight: normal;
+	color: dimgrey;
 	text-align: center;
 }
 
@@ -199,8 +208,8 @@ h6 {
     transition: transform 0.5s;
     color: white;
     border-radius: 24px;
-    width: 400px;
-	height: 250px;
+    width: 100%;
+    height: 100%;
 }
 
 .card.active .card-front {
@@ -215,6 +224,8 @@ h6 {
     backface-visibility: hidden;
     transition: transform 0.5s;
     color: white;
+    width: 100%;
+    height: 100%;
 }
 
 .card.active .card-rear {
@@ -416,6 +427,8 @@ textarea[purpose="daycardcaptionfield"]::placeholder {
 	font-weight: bold;
 	border-radius: 24px;
 	border: none;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+	margin-right: 0.25em;
 }
 
 .btn.btn-dark.active[btntype="like-btn"] {
@@ -423,6 +436,8 @@ textarea[purpose="daycardcaptionfield"]::placeholder {
 	font-weight: bold;
 	border-radius: 24px;
 	border: none;
+	box-shadow: 0px 0px 10px #0085FF;
+	margin-right: 0.25em;
 }
 
 .card[type="preview"] {
